Fix header and nav position on smaller screens; Temp remove about us link

--- a/src/styles/headerSection.css
+++ b/src/styles/headerSection.css
@@ -13,7 +13,7 @@
 }
 
 #navigation img {
-    width: 6rem;
+    width: 10rem;
 }
 
 #navigation ul {
